--- a/public/index.html
+++ b/public/index.html
@@ -336,80 +336,102 @@
         </div>
         <section id="about">
             <div class="container-fluid">
-                <h2>SOBRE MÍ</h2>
                 <div class="row">
+                    <h2>SOBRE MÍ</h2>
                     <div class="col-xs-12 col-md-3">
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                         <br>
-                        <button class="btn collapse-btn" data-toggle="collapse" data-target="#honors">
-                            <i class="fa fa-chevron-right"></i>
-                            <span>Reconocimientos</span>
-                        </button>
-                        <div id="honors" class="skills-info collapse">
+                        <div>
+                            <h3>PERSONALIDAD</strong></h3>
                             <ul>
-                                <li>
-                                    <p>TERCIO SUPERIOR - 6° PROMOCIÓN LABORATORIA</p>
-                                    <p><i>jul. 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>BEST SQUAD</p>
-                                    <p><i>jul. 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>BEST SQUAD</p>
-                                    <p><i>may. 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>JEDI MASTER</p>
-                                    <p><i>may. 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>MENCIÓN ESPECIAL POR INNOVACIÓN TECH</p>
-                                    <p><i>abr. 2017</i></p>
-                                </li>
-                                <li>
-                                    <p>LA MÁS PROACTIVA</p>
-                                    <p><i>feb. 2017</i></p>
-                                </li>
+                                <li>Determinada</li>
+                                <li>Ojo para el detalle</li>
+                                <li>Comunicativa</li>
+                                <li>Colaborativa</li>
                             </ul>
+                            <h3>RECONOCIMIENTOS</h3>
+
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#upperThird">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Tercio Superior</span>
+                            </button>
+                            <div id="upperThird" class="skills-info collapse">
+                                <p>Graduada perteneciente al tercio superior en la sexta promoción (julio 2017) de Laboratoria.</p>
+                            </div>
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#bestSquad">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Best Squad</span>
+                            </button>
+                            <div id="bestSquad" class="skills-info collapse">
+                                <p>Badges recibidos en los sprints 4 y 6 (mayo - julio 2017) en Laboratoria. Estos premios son entregados al squad con mayor puntaje técnico en el sprint.</p>
+                            </div>
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#jediMaster">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Jedi Master</span>
+                            </button>
+                            <div id="jediMaster" class="skills-info collapse">
+                                <p>Fui encargada con la responsabilidad de Jedi Master en el 4° Sprint de Laboratoria gracias a mi alto rendimiento técnico en el 3° Sprint para hacer seguimiento y asegurar el avance parejo de mi squad. Desarrollé pre-quizzes y recolecté feedback personal en los daily stand ups para brindar pequeños reportes al equipo de Laboratoria para así ayudar a nuestro aprendizaje en conjunto.</p>
+                            </div>
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#mention">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>Mención especial</span>
+                            </button>
+                            <div id="mention" class="skills-info collapse">
+                                <p>Mención Especial por Innovación Tech recibida en el 3° Sprint de Laboratoria por nuestro proyecto titulado <em>Wanderlust</em> para el Proyecto X, desarrollado en 48 horas.</p>
+                            </div>
+                            <button class="btn collapse-btn" data-toggle="collapse" data-target="#proactive">
+                                <i class="fa fa-chevron-right"></i>
+                                <span>La más proactiva</span>
+                            </button>
+                            <div id="proactive" class="skills-info collapse">
+                                <p>Badge otorgado a la más proactiva del sprint en Laboratoria. Este badge lo recibí en el 1° Sprint al tomarme el tiempo de investigar lo suficiente sobre HTML y CSS para poder desarrollar una réplica de Trello, agregándole así el maquetado a uno de los últimos proyectos del sprint.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
-                            <div class="col-md-12">
-                                <h4><strong><em>Versión corta</em></strong></h4>
-                            </div>
                             <div class="col-md-7">
-                                <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer junior</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.</p>
-                                <p>En la actualidad busco ser parte de un equipo de emprendedores impulsados por una cultura de diseño y metodologías ágiles para poder amoldarme a nuevos estándares de trabajo en el área de desarrollo.</p>
+                                <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer junior</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú.</p>
+                                <p>En la actualidad busco ser parte de un equipo de emprendedores y visionarios determinados a cambiar el mundo con la tecnología. Soy una persona súper apasionada y comprometida con las cosas que me trazo y son algunas de las cosas que me caracterizan, pienso que amoldarme un lugar impulsado por una cultura de diseño y metodologías ágiles sería lo ideal, ya que fui capacitada para ello.</p>
+                                <p>Mi desempeño en Laboratoria fue bastante bueno, tengo la certeza de que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer y estoy segura que ese mindset me ayudó a obtener varios reconocimientos a lo largo del programa.</p>
+
+                                <h3>Intereses</h3>
+                                <p>Me interesan mucho las causas sociales y el emprendimiento, por otro lado el UX es algo que llama mucho mi atención y estoy llevando cursos en mi tiempo libre para aprender más del tema aunque por lo pronto mi enfoque principal sea el desarrollo web. Por ese lado me interesa aprender sobre más front-end frameworks para agilizar mi ritmo de trabajo y también sobre las mejores prácticas en el ámbito. Laboratoria sigue siendo un gran soporte y seguiré instruyéndome con ellos hasta obtener conocimientos fullstack en JavaScript.</p>
+                                <p>Muy aparte tengo gran afición por la música, diseño, fotografía y una de las plataformas que uso para compartir varios de mis hobbies e intereses es Instagram, así que pueden ver más sobre las cosas que me inspiran ahí.</p>
                             </div>
-                            <div class="col-md-5">
-                                <h5><strong>SKILL SET</strong></h5>
-                                <p>HTML5, CSS3, Materialize, Bootstrap, SASS, BEM, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), SEO, HTTP JSON &amp; consumo de APIs.</p>
-                                <h5><strong>TOOLS</strong></h5>
-                                <p>Brackets, Git, GitHub, Gulp, Heroku.</p>
+                            <div class="about-content col-md-5">
+                                <h3>SKILL SET</h3>
+                                <ul>
+                                    <li>HTML5</li>
+                                    <li>CSS3</li>
+                                    <li>SASS</li>
+                                    <li>BEM</li>
+                                    <li>JavaScript</li>
+                                    <li>ECMAScript 6</li>
+                                    <li>jQuery &amp; AJAX</li>
+                                    <li>Bootstrap</li>
+                                    <li>Materialize</li>
+                                    <li>npm (package manager)</li>
+                                    <li>SEO</li>
+                                    <li>HTTP JSON &amp; consumo de APIs</li>
+                                </ul>
+                                <br>
+                                <h3>TOOLS</h3>
+                                <ul>
+                                    <li>Brackets</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
+                                    <li>Gulp</li>
+                                    <li>Heroku</li>
+                                    <li>Adobe XD</li>
+                                    <li>Illustrator</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
                 <hr>
-                <div class="row">
-                    <div class="about__long col-md-12">
-                        <h4><strong><em>Versión larga</em></strong>
-                        <a href="#interests" class="skip"><i class="fa fa-arrow-right"></i> (Saltar)</a></h4>
-                        <img class="img-right" src="img/omfg.jpg" alt="Annia haciendo pedidos para OMFG! Accesorios">
-                        <p>Mi primer trabajo fue a los 19 años cuando <strong>decidí</strong> hacer de mi hobby un negocio y abrí una tienda de accesorios hechos a mano en Facebook con intenciones de aprender más sobre el mundo de las ventas por internet. Fue una experiencia bastante enriquecedora y llena de aprendizaje, en la que desarrollé un fuerte interés por el <strong>emprendimiento</strong>, <strong>branding</strong> y la forma en la que mis clientes experimentaban el proceso de compras en línea y de forma presencial, (cosa que más adelante despertaría un interés aún mayor por el <strong>UX</strong>). Ese proyecto hizo que desarrollara aún más mis habilidades para la <strong>organización</strong>, <strong>planeación</strong>, mi enfoque al <strong>detalle</strong> y la <strong>fotografía</strong>.</p>
-                        <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las <strong>causas sociales</strong> despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
-                        <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles para poder adaptarme a nuevos estándares de trabajo en el área de desarrollo. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo y sé que tengo un largo camino por recorrer.</p>
-                        <p>Mi desempeño en el bootcamp de Laboratoria fue bastante bueno, creo que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer; gracias a este mindset y mi personalidad decisiva siento que absorví como una esponja todos estos temas que eran algo nuevo para mí y obtuve varios reconocimientos a lo largo del programa.</p>
-                    </div>
-                </div>
                 <div id="interests" class="row">
-                    <div class="col-md-12">
-                        <h3>Intereses</h3>
-                        <p>Me interesa mucho el e-learning, aprender sobre front-end frameworks para agilizar mi ritmo de trabajo y también sobre las mejores prácticas en el ámbito; el manejo efectivo de redes sociales, diseño y superación personal continua son otros temas que llaman mi atención.</p>
-                        <p>Tengo también una fuerte afición por la música, fotografía y una de las plataformas que uso para compartir varios de mis hobbies e intereses es Instagram.</p>
-                    </div>
                     <div class="insta-feed col-md-12">
                         <script src="https://snapwidget.com/js/snapwidget.js"></script>
                         <iframe src="https://snapwidget.com/embed/410595" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
