--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Laboratoria graduate Front-end Developer in Lima, Peru.</title>
+    <title>Annia J. Flores | Designer, Front-end Developer.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
@@ -34,8 +34,8 @@
 <body>
     <nav class="navbar-fixed hidden-xs">
         <div class="container-fluid">
-            <span class="nav-text">ANNIA J. FLORES | FRONT-END DEVELOPER</span>
-            <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="My email"><i class="fa fa-envelope-o"></i> SAY HELLO! :)</a>
+            <span class="nav-text">ANNIA J. FLORES | DESIGNER, FRONT-END DEVELOPER</span>
+            <a class="nav-text" href="mailto:anniajflores@gmail.com" title="My email"><i class="fa fa-envelope-o"></i> SAY HELLO! :)</a>
         </div>
     </nav>
     <div class="wrapper">
@@ -62,7 +62,7 @@
                     <div class="home__logo">
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
-                    <p class="hidden-xs">FRONT-END DEVELOPER, LIMA - PERU</p>
+                    <p class="hidden-xs">DESIGNER, FRONT-END DEVELOPER, LIMA - PERU</p>
                     <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_eng.pdf">
                         <button class="btn home__button animate-flicker" type="submit">Download CV</button>
                     </form>
@@ -179,7 +179,7 @@
                 <div class="row">
                     <h2>ABOUT ME</h2>
                     <div class="col-xs-12 col-md-3">
-                        <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
+                        <img class="img-circle img-responsive" src="img/about_me.jpg" alt="Annia J. Flores avatar">
                         <br>
                         <div>
                             <h3><strong>Personality</strong></h3>
@@ -302,13 +302,13 @@
         </header>
         <div id="contact" class="download">
             <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_eng.pdf">
-                <p>Say hello: itsandromeda@gmail.com</p>
+                <p>Say hello: anniajflores@gmail.com</p>
                 <i class="fa fa-long-arrow-down animate-flicker"></i>
                 <button class="btn home__button" type="submit">Download my CV</button>
                 <i class="fa fa-long-arrow-up animate-flicker"></i>
             </form>
             <div>
-                <p>You can see my portfolio's repository and check out the code right <a href="https://github.com/itsandromeda/Portfolio" target="_blank">here</a>.</p>
+                <p>Design & code by Annia Flores. Visit my portfolio's repository <a href="https://github.com/itsandromeda/Portfolio" target="_blank">here</a>.</p>
             </div>
         </div>
     </div>
@@ -332,7 +332,7 @@
                 </li>
             </ul>
             <a href="#" class="top footer-text">Go up</a>
-            <span class="hidden-xs">ANNIA J.FLORES - 2018</span>
+            <span class="hidden-xs">ANNIA J.FLORES - 2019</span>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
