--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Front-end Developer egresada de Laboratoria en Lima, Perú.</title>
+    <title>Annia J. Flores | Diseñadora, Front-end Developer.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
@@ -32,8 +32,8 @@
 <body>
     <nav class="navbar-fixed hidden-xs">
         <div class="container-fluid">
-            <span class="nav-text">ANNIA J. FLORES | FRONT-END DEVELOPER</span>
-            <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="Mi correo electrónico"><i class="fa fa-envelope-o"></i> ¡ESCRÍBEME! :)</a>
+            <span class="nav-text">ANNIA J. FLORES | DISEÑADORA, FRONT-END DEVELOPER</span>
+            <a class="nav-text" href="mailto:anniajflores@gmail.com" title="Mi correo electrónico"><i class="fa fa-envelope-o"></i> ¡ESCRÍBEME! :)</a>
         </div>
     </nav>
     <div class="wrapper">
@@ -60,7 +60,7 @@
                     <div class="home__logo">
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
-                    <p class="hidden-xs">FRONT-END DEVELOPER, LIMA - PERÚ</p>
+                    <p class="hidden-xs">DISEÑADORA, FRONT-END DEVELOPER, LIMA - PERÚ</p>
                     <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_es.pdf">
                         <button class="btn home__button" type="submit">Descargar CV</button>
                     </form>
@@ -293,7 +293,7 @@
                 <div class="row">
                     <h2>SOBRE MÍ</h2>
                     <div class="col-xs-12 col-md-3">
-                        <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
+                        <img class="img-circle img-responsive" src="img/about_me.jpg" alt="Annia J. Flores avatar">
                         <br>
                         <div>
                             <h3><strong>PERSONALIDAD</strong></h3>
@@ -416,13 +416,13 @@
         </header>
         <div id="contact" class="download">
             <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_es.pdf">
-                <p>Escríbeme: itsandromeda@gmail.com</p> 
+                <p>Escríbeme: anniajflores@gmail.com</p> 
                 <i class="fa fa-long-arrow-down animate-flicker"></i>
                 <button class="btn home__button" type="submit">Descarga mi CV</button>
                 <i class="fa fa-long-arrow-up animate-flicker"></i>
             </form>
             <div>
-                <p>Para ver el repositorio de este portafolio puedes hacer click <a href="https://github.com/itsandromeda/Portfolio" target="_blank">aquí</a>.</p>
+                <p>Diseño & código por Annia Flores. Visita el repositorio de mi portafolio <a href="https://github.com/itsandromeda/Portfolio" target="_blank">aquí</a>.</p>
             </div>
         </div>
     </div>
@@ -446,7 +446,7 @@
                 </li>
             </ul>
             <a href="#" class="top footer-text">Volver arriba</a>
-            <span class="hidden-xs">ANNIA J.FLORES - 2018</span>
+            <span class="hidden-xs">ANNIA J.FLORES - 2019</span>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
